--- a/osa2/puhelinluettelo/package.json
+++ b/osa2/puhelinluettelo/package.json
@@ -15,6 +15,8 @@
     "eject": "react-scripts eject",
     "server": "json-server -p3001 db.json"
   },
+  
+
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -32,5 +34,6 @@
   },
   "devDependencies": {
     "json-server": "^0.15.0"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
