--- a/osa4/blogi/package.json
+++ b/osa4/blogi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blogi",
   "version": "1.0.0",
-  "description": "",
+  "description": "Blogilist",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.16.1",
     "mongoose": "^5.8.5"
   },
   "devDependencies": {
