--- a/osa4/blogi/package.json
+++ b/osa4/blogi/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose"
   },
   "author": "Liia",
   "license": "ISC",
@@ -17,6 +18,10 @@
     "mongoose": "^5.8.5"
   },
   "devDependencies": {
+    "jest": "^24.9.0",
     "nodemon": "^2.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
