--- a/osa4/blogi/package.json
+++ b/osa4/blogi/package.json
@@ -11,10 +11,13 @@
   "author": "Liia",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.1",
-    "mongoose": "^5.8.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.6",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
